--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>NSF</title>
+<title>CS561/CS571</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -126,24 +126,23 @@ function poptastic(url)
 during different stages of disaster management
 <ul>
   <li>
-    <font color="red"><b>Hurricanes</b></font> [Lead: Rick Devoe, S.C. Sea Grant Consortium; Co-leads: Keri
-Stephens, UT Austin & Andrea Tapia, Penn State]
+    <font color="red"><b>Hurricanes</b></font> [Lead: <font color="green"><b>Rick Devoe</b></font>, S.C. Sea Grant Consortium; Co-leads: <font color="green"><b>Keri Stephens</b></font>, UT Austin & <font color="green"><b>Andrea Tapia</b></font>, Penn State]
   </li>
     <li>
-<font color="red"><b>Floods</b></font> [Lead: Susan Lovelace, S.C. Sea Grant Consortium; Co-leads: Hanif Chaudhary, U. of S. Carolina & Jess Kropczynski, U. Cincinnati]
+<font color="red"><b>Floods</b></font> [Lead: <font color="green"><b>Susan Lovelace</b></font>, S.C. Sea Grant Consortium; Co-leads: <font color="green"><b>Hanif Chaudhary</b></font>, U. of S. Carolina & <font color="green"><b>Jess Kropczynski</b></font>, U. Cincinnati]
   </li>
      <li>
-<font color="red"><b>Wildfires</b></font> [Lead: Ilkay Altinas, San Diego Supercomputing Center; Co-leads:
-Amanda Hughes, Brigham Young Univ. & Deepak Khazanchi, U. Nebraska]
+<font color="red"><b>Wildfires</b></font> [Lead: <font color="green"><b>Ilkay Altinas</b></font>, San Diego Supercomputing Center; Co-leads:
+<font color="green"><b>Amanda Hughes</b></font>, Brigham Young Univ. & <font color="green"><b>Deepak Khazanchi</b></font>, U. Nebraska]
   </li>
        <li>
-<font color="red"><b>Tornadoes</b></font> [Lead: Terry Orozi, Dayton Think Tank; Co-leads: Valerie Shalin,
-Wright State & Monica Sanders, U. Delaware]
+<font color="red"><b>Tornadoes</b></font> [Lead: <font color="green"><b>Terry Orozi</b></font>, Dayton Think Tank; Co-leads: <font color="green"><b>Valerie Shalin</b></font>,
+Wright State & <font color="green"><b>Monica Sanders</b></font>, U. Delaware]
   </li>
 </ul>
 </li>
 <li>
-  3:30 - 4:00pm : Coffee Bre
+  3:30 - 4:00pm : Coffee Break
 </li>
 <li>
   4:00 - 5:30pm : Breakout Group Summaries on Identified Research and Convergence Needs
@@ -154,16 +153,17 @@ Wright State & Monica Sanders, U. Delaware]
   5:30 - 7:00pm : Working Reception - Posters and Demos (Open for all participants)
   <h6>
     Demo highlights [2 minutes teaser to the tool you can demo] </br>
-    [<font color="green"><b>Poster & Demo Co-chair: Erfan Goharian</b></font>, Univ. of South Carolina]
+    [Poster & Demo Co-chair: <font color="green"><b>Erfan Goharian</b></font>, Univ. of South Carolina]
   </h6>
   <h5>Poster Title</h5>
   <ol>
     <li>
-      SMart big data pipeline for Aging Rural bridge Transportation Infrastructure
+      <font color="CadetBlue"><b>
+      SMart big data pipeline for Aging Rural bridge Transportation Infrastructure</b></font>
 [Author: Deepak Khazanchi, U. Nebraska] 
     </li>
-    <li>
-       Creating a High-Signal Dataset with Private Social Media
+    <li><font color="CadetBlue"><b>
+       Creating a High-Signal Dataset with Private Social Media</b></font>
 [Authors: Keri K. Stephens, Dhiraj Murthy, Brett W. Robertson, & W. Roth
 Smith, UT Austin]
     </li>
@@ -179,17 +179,17 @@ Dinner on own - Plenty of Nice Restaurants in Walking Distance
 Management (<font color="green"><b>Coordinator: Ilkay Altinas</b></font>)
 <ul>
 <li>
-Adam Barker, FEMA
+<font color="green"><b>Adam Barker</b></font>, FEMA
 </li>
 <li>
-Dan Burger, SC Dept. of Health and Environmental Control, Charleston Resilience
+<font color="green"><b>Dan Burger</b></font>, SC Dept. of Health and Environmental Control, Charleston Resilience
 Network
 </li>
 <li>
-Rusty Lacy, Nashville Fire Department
+<font color="green"><b>Rusty Lacy</b></font>, Nashville Fire Department
 </li>
 <li>
-Terry Oroszi, Dayton Think Tank
+<font color="green"><b>Terry Oroszi</b></font>, Dayton Think Tank
 </li>
 </ul>
 </li>
@@ -199,13 +199,13 @@ Terry Oroszi, Dayton Think Tank
 Phases
 <ul>
 <li>
-Mitigation and Preparedness [Co-leads: Abhishek Dubey, Vanderbilt; Brenda
-Bannan, George Mason Univ.]</li>
+<font color="red"><b>Mitigation and Preparedness</b></font> [Co-leads: <font color="green"><b>Abhishek Dubey</b></font>, Vanderbilt; <font color="green"><b>Brenda
+Bannan</b></font>, George Mason Univ.]</li>
 <li>
-Response [Co-leads: Muhammad Imran, QCRI; Ibrahim Demir, Univ. of Iowa]
+<font color="red"><b>Response</b></font> [Co-leads: <font color="green"><b>Muhammad Imran</b></font>, QCRI; <font color="green"><b>Ibrahim Demir</b></font>, Univ. of Iowa]
 </li>
 <li>
-Recovery [Co-leads: T.K. Prasad, Wright State Univ., Chris Zobel, Virginia Tech]
+<font color="red"><b>Recovery</b></font> [Co-leads: <font color="green"><b>T.K. Prasad</b></font>, Wright State Univ., <font color="green"><b>Chris Zobel</b></font>, Virginia Tech]
 </li>
 </ul>
 </li>
@@ -214,29 +214,28 @@ Recovery [Co-leads: T.K. Prasad, Wright State Univ., Chris Zobel, Virginia Tech]
 12:15 - 1:30pm : Lunch Break (Served- Buffet Style)
 </li>
 <li>
-  1:30 - 3:30pm : Breakout Group Summaries on Convergence Challenges (Coordinator: Hemant
-Purohit)
+  1:30 - 3:30pm : Breakout Group Summaries on Convergence Challenges (Coordinator: <font color="green"><b>Hemant Purohit</b></font>)
 </li>
 <li>
  3:30 - 4:00pm : Coffee Break
 </li>
 <li>
  4:00 - 5:30pm : Researcher Panel on Vision of Future Disaster Management Technologies
-(Coordinator: Amit Sheth)
+(Coordinator: <font color="green"><b>Amit Sheth</b></font>)
 <ul>
 <li>
-DeeDee Bennett, SUNY Albany</li>
+<font color="green"><b>DeeDee Bennett</b></font>, SUNY Albany</li>
 <li>
-Susan Cutter, Univ. of South Carolina
+<font color="green"><b>Susan Cutter</b></font>, Univ. of South Carolina
 </li>
 <li>
-Srinivasan Parthasarathy, Ohio State Univ.
+<font color="green"><b>Srinivasan Parthasarathy</b></font>, Ohio State Univ.
 </li>
 <li>
-Hemant Purohit, George Mason Univ
+<font color="green"><b>Hemant Purohit</b></font>, George Mason Univ
 </li>
 <li>
-Nalini Venkatasubramanian, Univ. of California, Irvine
+<font color="green"><b>Nalini Venkatasubramanian</b></font>, Univ. of California, Irvine
 </li>
 </ul>
 </li>
