--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ Bannan</b></font>, George Mason Univ.]</li>
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
  
-<!--  <p>Developed by <a href="https://shwetanlp.github.io/">Shweta</a>, . Credit to <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3schools.com</a></p> -->
+<!--  <p>Developed by <a href="https://shwetanlp.github.io/">Shweta</a>, . <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3schools.com</a></p> -->
 </footer>
 
 <script>
