fixed broken url to Shweta's webpage

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Bannan</b></font>, George Mason Univ.]</li>
 
   <li>
   <h5>      
-    <a href="shwetanlp.github.io">Dr. Shweta Yadav</a>&nbsp;(shweta[AT]knoesis.org)
+    <a href="https://shwetanlp.github.io">Dr. Shweta Yadav</a>&nbsp;(shweta[AT]knoesis.org)
     </h5>
 </li>
 </li>
