--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
         <h1></h1>
         <h5>
           <p align="justify">
-            The goal of this symposium is to create a community around AI for understanding prevention,
-            preparedness,
-            response and recovery from natural disasters. The symposium will bring together the full range of
+             The symposium will bring together the full range of
             stakeholders contributing to the practice and science of disaster management, who will be able to reflect on
             the past research efforts funded by NSF and other agencies as well as understand and assess the state of the
             art. </p>
