--- a/index.html
+++ b/index.html
@@ -207,15 +207,54 @@
               <li>
                 <font color="CadetBlue"><b>
                     Smart big data pipeline for Aging Rural bridge Transportation Infrastructure</b></font>
-                [Author: Deepak Khazanchi, U. Nebraska]
+                [Author: <font color="#00565E"><b>Deepak Khazanchi</b></font>, U. Nebraska]
               </li>
               <li>
                 <font color="CadetBlue"><b>
                     Creating a High-Signal Dataset with Private Social Media</b></font>
-                [Authors: Keri K. Stephens, Dhiraj Murthy, Brett W. Robertson, & W. Roth
+                [Authors: <font color="#00565E"><b>Keri K. Stephens</b></font>, Dhiraj Murthy, Brett W. Robertson, & W. Roth
                 Smith, UT Austin]
               </li>
+
+               <li>
+                <font color="CadetBlue"><b>
+                    Improving Resiliency through Real-Time Disaster Research - An Emergency Manager's Perspective</b></font>
+                [Author: <font color="#00565E"><b>Steve Peterson</b></font>, Montgomery County Maryland CERT]
+              </li>
+
+               <li>
+                <font color="CadetBlue"><b>
+                    Computational artifacts for distributed human planning and action in physical domains:  Combining lessons from space operations and European disaster response </b></font>
+                [Author: <font color="#00565E"><b>Valerie L. Shalin</b></font>, Wright State University & Beatrice Linot, University of Lorraine]
+              </li>
             </ol>
+
+            <h5>Demos Title</h5>
+            <ol>
+              <li>
+                <font color="CadetBlue"><b>
+                    AI and Social Media Multimodal Data for Disaster Response </b></font>
+                [Author: <font color="#00565E"><b> Muhammad Imran, Ferda Ofli, Firoj Alam, Umair Qazi</b></font>, Qatar Computing Research Institute]
+              </li>
+              <li>
+                <font color="CadetBlue"><b>
+                    CitizenHelper: AI-augmented Multimodal Stream Analytics System for Training and Operations of Emergency Services</b></font>
+                [Authors: <font color="#00565E"><b> Hemant Purohit, Rahul Pandey, Gaurav Bahl, Ganesh Nalluru, Brenda Bannan</b></font>, George Mason University]
+              </li>
+
+               <li>
+                <font color="CadetBlue"><b>
+                    Improving Resiliency through Real-Time Disaster Research - An Emergency Manager's Perspective</b></font>
+                [Author: <font color="#00565E"><b>Steve Peterson</b></font>, Montgomery County Maryland CERT]
+              </li>
+
+               <li>
+                <font color="CadetBlue"><b>
+                    Disaster Record </b></font>
+                [Author: <font color="#00565E"><b>T. K. Prasad, Amit Sheth</b></font>]
+              </li>
+            </ol>
+
           </li>
           Dinner on own - Plenty of Nice Restaurants in Walking Distance
         </ul>
@@ -362,20 +401,62 @@
 
   <hr>
 
-  <section name="venue" id="venue">
+  <section name="materials" id="materials">
     <div class="w3-content">
       <h1>
-        <font color="#00565E"><b>Venue</b></font>
+        <font color="#00565E"><b>Materials</b></font>
       </h1>
       <h5>
-        <a href="https://www.columbiaconventioncenter.com/">
-          <font color='blue'>Columbia Metropolitan Convention Center</font>
-        </a> </br>
-        1101 Lincoln St, Columbia </br>
-        SC 29201 </br></h5>
+        <ul>
+          <li>
+        <a href="https://drive.google.com/open?id=1a1e_nsH_4y-TxRr-ulFkvefhB12eZ-gY">
+          <font color='blue'>Brief on Symposium Goals and Convergence Program</font>
+        </a></li>
+               <li>
+        <a href="https://drive.google.com/open?id=1SEPa4QZjpUqfoSfO8c44-MRQU4Crdu20">
+          <font color='blue'>Participant Introductory Presentations</font>
+        </a></li>
+              <li>
+        <a href="https://drive.google.com/open?id=1X5nA3Ub24XWmyJ6cmPnOl8ivo6lMk7wW">
+          <font color='blue'>Practitioner Panel on Domain Challenges across Different Disaster Phases</font>
+        </a></li>
+      </ul>
     </div>
 
   </section>
+
+
+  <hr>
+  <section name="contacts" id="contact">
+    <div class="w3-content">
+      <h1>
+        <font color="#00565E"><b>Contact Us</b></font>
+      </h1>
+      <ul>
+        <li>
+          <h5>
+            <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/amitsheth.php">Prof.
+              Amit Sheth, UofSC (PI)</a>&nbsp;(amit[AT]sc.edu)
+          </h5>
+        </li>
+
+        <li>
+          <h5>
+            <a href="https://ist.gmu.edu/~hpurohit/">Prof. Hemant Purohit, GMU</a>&nbsp;(hpurohit[AT]gmu.edu)
+          </h5>
+        </li>
+
+
+        <li>
+          <h5>
+            <a href="https://shwetanlp.github.io">Dr. Shweta Yadav</a>&nbsp;(shweta[AT]knoesis.org)
+          </h5>
+        </li>
+        </li>
+      </ul>
+    </div>
+  </section>
+
 
   <hr>
   <section name="contacts" id="contact">
