--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                <li>
                 <font color="CadetBlue"><b>
                     Computational artifacts for distributed human planning and action in physical domains:  Combining lessons from space operations and European disaster response </b></font>
-                [Author: <font color="#00565E"><b>Valerie L. Shalin</b></font>, Wright State University & Beatrice Linot, University of Lorraine]
+                [Authors: <font color="#00565E"><b>Valerie L. Shalin</b></font>, Wright State University & Beatrice Linot, University of Lorraine]
               </li>
             </ol>
 
@@ -234,7 +234,7 @@
               <li>
                 <font color="CadetBlue"><b>
                     AI and Social Media Multimodal Data for Disaster Response </b></font>
-                [Author: <font color="#00565E"><b> Muhammad Imran, Ferda Ofli, Firoj Alam, Umair Qazi</b></font>, Qatar Computing Research Institute]
+                [Authors: <font color="#00565E"><b> Muhammad Imran, Ferda Ofli, Firoj Alam, Umair Qazi</b></font>, Qatar Computing Research Institute]
               </li>
               <li>
                 <font color="CadetBlue"><b>
@@ -245,13 +245,13 @@
                <li>
                 <font color="CadetBlue"><b>
                     Improving Resiliency through Real-Time Disaster Research - An Emergency Manager's Perspective</b></font>
-                [Author: <font color="#00565E"><b>Steve Peterson</b></font>, Montgomery County Maryland CERT]
+                [Authors: <font color="#00565E"><b>Steve Peterson</b></font>, Montgomery County Maryland CERT]
               </li>
 
                <li>
                 <font color="CadetBlue"><b>
                     Disaster Record </b></font>
-                [Author: <font color="#00565E"><b>T. K. Prasad, Amit Sheth</b></font>]
+                [Authors: <font color="#00565E"><b>T. K. Prasad and Amit Sheth</b></font>]
               </li>
             </ol>
 
@@ -344,6 +344,30 @@
     </div>
   </section>
 
+<hr>
+ <section name="materials" id="materials">
+    <div class="w3-content">
+      <h1>
+        <font color="#00565E"><b>Materials</b></font>
+      </h1>
+      <h5>
+        <ul>
+          <li>
+        <a href="https://drive.google.com/open?id=1a1e_nsH_4y-TxRr-ulFkvefhB12eZ-gY">
+          <font color='blue'>Brief on Symposium Goals and Convergence Program</font>
+        </a></li>
+               <li>
+        <a href="https://drive.google.com/open?id=1SEPa4QZjpUqfoSfO8c44-MRQU4Crdu20">
+          <font color='blue'>Participant Introductory Presentations</font>
+        </a></li>
+              <li>
+        <a href="https://drive.google.com/open?id=1X5nA3Ub24XWmyJ6cmPnOl8ivo6lMk7wW">
+          <font color='blue'>Practitioner Panel on Domain Challenges across Different Disaster Phases</font>
+        </a></li>
+      </ul>
+    </div>
+
+  </section>
 
 
   <hr>
@@ -399,32 +423,7 @@
   </section>
 
 
-  <hr>
-
-  <section name="materials" id="materials">
-    <div class="w3-content">
-      <h1>
-        <font color="#00565E"><b>Materials</b></font>
-      </h1>
-      <h5>
-        <ul>
-          <li>
-        <a href="https://drive.google.com/open?id=1a1e_nsH_4y-TxRr-ulFkvefhB12eZ-gY">
-          <font color='blue'>Brief on Symposium Goals and Convergence Program</font>
-        </a></li>
-               <li>
-        <a href="https://drive.google.com/open?id=1SEPa4QZjpUqfoSfO8c44-MRQU4Crdu20">
-          <font color='blue'>Participant Introductory Presentations</font>
-        </a></li>
-              <li>
-        <a href="https://drive.google.com/open?id=1X5nA3Ub24XWmyJ6cmPnOl8ivo6lMk7wW">
-          <font color='blue'>Practitioner Panel on Domain Challenges across Different Disaster Phases</font>
-        </a></li>
-      </ul>
-    </div>
-
-  </section>
-
+  
 
   <hr>
   <section name="contacts" id="contact">
