--- a/index.html
+++ b/index.html
@@ -426,34 +426,19 @@
   
 
   <hr>
-  <section name="contacts" id="contact">
+  <section name="venue" id="venue">
     <div class="w3-content">
       <h1>
-        <font color="#00565E"><b>Contact Us</b></font>
+        <font color="#00565E"><b>Venue</b></font>
       </h1>
-      <ul>
-        <li>
-          <h5>
-            <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/amitsheth.php">Prof.
-              Amit Sheth, UofSC (PI)</a>&nbsp;(amit[AT]sc.edu)
-          </h5>
-        </li>
-
-        <li>
-          <h5>
-            <a href="https://ist.gmu.edu/~hpurohit/">Prof. Hemant Purohit, GMU</a>&nbsp;(hpurohit[AT]gmu.edu)
-          </h5>
-        </li>
-
-
-        <li>
-          <h5>
-            <a href="https://shwetanlp.github.io">Dr. Shweta Yadav</a>&nbsp;(shweta[AT]knoesis.org)
-          </h5>
-        </li>
-        </li>
-      </ul>
+      <h5>
+        <a href="https://www.columbiaconventioncenter.com/">
+          <font color='blue'>Columbia Metropolitan Convention Center</font>
+        </a> </br>
+        1101 Lincoln St, Columbia </br>
+        SC 29201 </br></h5>
     </div>
+
   </section>
 
 
